all template pages done
next stage: view optimization and functions completion

--- a/contactus.html
+++ b/contactus.html
@@ -34,8 +34,9 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid events-container">
-      <h3 class="text-center">All Events</h3><a href="event.html" class="col-xs-12 col-sm-4 col-md-8 zero-margin zero-padding first-event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a>
+    <div class="container-fluid">
+      <h4 class="text-center">Any enquiries? Drop us your message here!</h4>
+      <iframe src="https://docs.google.com/forms/d/1aHRztyJWb6tBtVb9Z4zYMRX4FrsLBJKFdPBwzNWVsbk/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0" class="center-block">Loading...</iframe>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
     <script src="js/jquery_1.11.3_min.js"></script>
