--- a/event.html
+++ b/event.html
@@ -28,7 +28,7 @@
             <li><a href="all-events.html">Events</a></li>
             <li><a href="academic.html">Academic</a></li>
             <li><a href="outreach.html">Outreach</a></li>
-            <li><a href="publicationsandmerchandize.html">Publications & Merchandise</a></li>
+            <li><a href="publications_merchandize.html">Publications &amp; Merchandise</a></li>
             <li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>
@@ -37,52 +37,52 @@
     <div class="container-fluid">
       <div class="col-md-1"></div>
       <div class="col-md-10">
-        <h3>Event title</h3><img src="http://placehold.it/1050x700" class="img-responsive">
+        <h3>Event title</h3><img src="http://placehold.it/600x400" class="img-responsive center-block">
       </div>
       <div class="col-md-1"></div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid event-details-tab-container">
       <ul class="nav nav-tabs">
-        <li role="presentation"><a href="#about" role="tab" data-toggle="tab">About this event</a></li>
-        <li role="presentation" class="active"><a href="#register" role="tab" data-toggle="tab">Register</a></li>
+        <li role="presentation" class="active"><a href="#about" role="tab" data-toggle="tab">About this event</a></li>
+        <li role="presentation"><a href="#register" role="tab" data-toggle="tab">Register</a></li>
         <li role="presentation"><a href="#updates" role="tab" data-toggle="tab">Updates</a></li>
         <li role="presentation"><a href="#gallery" role="tab" data-toggle="tab">Gallery</a></li>
       </ul>
       <div class="tab-content">
-        <div id="about" role="tabpanel" class="tab-pane">
+        <div id="about" role="tabpanel" class="tab-pane active">
           <h4>Description</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras accumsan ornare sagittis. Integer scelerisque ante quis tellus lacinia porta. Nam imperdiet risus at mi faucibus luctus. Praesent tortor arcu, aliquet quis semper eget, posuere a nibh. Duis quis quam lacus. Morbi consequat tellus eget pharetra euismod. </p>
-          <table class="table">
+          <table class="table date-time-venue-table">
             <tr>
-              <td>Date</td>
-              <td>Date</td>
+              <td class="date-time-venue-table-left">Date</td>
+              <td class="date-time-venue-table-right">Date</td>
             </tr>
             <tr>
-              <td>Time</td>
-              <td>Time</td>
+              <td class="date-time-venue-table-left">Time</td>
+              <td class="date-time-venue-table-right">Time</td>
             </tr>
             <tr>
-              <td>Venue</td>
-              <td>Venue</td>
+              <td class="date-time-venue-table-left">Venue</td>
+              <td class="date-time-venue-table-right">Venue</td>
             </tr>
           </table>
         </div>
-        <div id="register" role="tabpanel" class="tab-pane active">
+        <div id="register" role="tabpanel" class="tab-pane">
           <h4>Register now!!!</h4>
           <iframe src="https://docs.google.com/forms/d/1aHRztyJWb6tBtVb9Z4zYMRX4FrsLBJKFdPBwzNWVsbk/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
-        <div id="updates" role="tabpanel" class="tab-pane active">
-          <div class="panel">
-            <h6>Announcement 1</h6>
+        <div id="updates" role="tabpanel" class="tab-pane">
+          <div class="container-fluid event-updates-container">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla.</p>
           </div>
-          <div class="panel">
-            <h6>Announcement 1</h6>
+          <div class="container-fluid event-updates-container">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla.</p>
           </div>
-          <div class="panel">
-            <h6>Announcement 1</h6>
+          <div class="container-fluid event-updates-container">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla.</p>
           </div>
         </div>
-        <div id="gallery" role="tabpanel" class="tab-pane active">
+        <div id="gallery" role="tabpanel" class="tab-pane">
           <h4>We are building... Exciting images are on the way.</h4>
         </div>
       </div>
