--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="all-events.html">Events</a></li>
             <li><a href="academic.html">Academic</a></li>
             <li><a href="outreach.html">Outreach</a></li>
-            <li><a href="publicationsandmerchandize.html">Publications & Merchandise</a></li>
+            <li><a href="publications_merchandize.html">Publications &amp; Merchandise</a></li>
             <li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>
@@ -46,7 +46,7 @@
       </div>
       <div class="col-md-5">
         <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce pretium molestie nibh vestibulum lacinia. Phasellus id nibh eu orci mollis porta. Integer tempor eros elit, eu sagittis magna efficitur a. Suspendisse at lobortis libero. Maecenas sed orci fermentum, finibus enim sit amet, aliquam ipsum. Maecenas efficitur gravida lorem in tempus. Vivamus mattis, velit ac mattis ultrices, nunc magna placerat magna, vel laoreet arcu quam faucibus nisl. </p>
-        <button class="btn btn-primary">See current committee >>></button>
+        <button onclick="location.href = 'committee.html'" class="btn btn-primary">See current committee >>></button>
       </div>
       <div class="col-md-2"></div>
     </div>
@@ -69,14 +69,23 @@
     </div>
     <div class="container-fluid">
       <h2 class="text-center">Latest News</h2>
-      <div class="panel panel-info announcements center-block">
-        <p>Announcement 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p><img src="http://placehold.it/100x100">
+      <div class="container-fluid announcements center-block">
+        <div class="col-md-4"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
+        <div class="col-md-8">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+        </div>
       </div>
-      <div class="panel panel-info announcements center-block">
-        <p>Announcement 2: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p><img src="http://placehold.it/100x100">
+      <div class="container-fluid announcements center-block">
+        <div class="col-md-4"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
+        <div class="col-md-8">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+        </div>
       </div>
-      <div class="panel panel-info announcements center-block">
-        <p>Announcement 3: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p><img src="http://placehold.it/100x100">
+      <div class="container-fluid announcements center-block">
+        <div class="col-md-4"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
+        <div class="col-md-8">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+        </div>
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
