--- a/layout.html
+++ b/layout.html
@@ -28,7 +28,7 @@
             <li><a href="all-events.html">Events</a></li>
             <li><a href="academic.html">Academic</a></li>
             <li><a href="outreach.html">Outreach</a></li>
-            <li><a href="publicationsandmerchandize.html">Publications & Merchandise</a></li>
+            <li><a href="publications_merchandize.html">Publications &amp; Merchandise</a></li>
             <li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>
