--- a/outreach.html
+++ b/outreach.html
@@ -34,8 +34,17 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid events-container">
-      <h3 class="text-center">All Events</h3><a href="event.html" class="col-xs-12 col-sm-4 col-md-8 zero-margin zero-padding first-event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a>
+    <div class="container-fluid">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="row zero-margin zero-padding">
+          <h3 class="text-center">Thank you all sponsors for supporting us!</h3><img src="http://placehold.it/1280x720" class="img-responsive center-block">
+        </div>
+        <div class="row zero-margin zero-padding">
+          <h5 class="text-center">We are seeking more collaborations as well.<br>Kindly drop us your message <a href="contactus.html">here</a> if you are interested in our partnerships!<br>We would get back to you soon!</h5>
+        </div>
+      </div>
+      <div class="col-md-1"></div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
     <script src="js/jquery_1.11.3_min.js"></script>
