--- a/academic.html
+++ b/academic.html
@@ -34,9 +34,7 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid events-container">
-      <h3 class="text-center">All Events</h3><a href="event.html" class="col-xs-12 col-sm-4 col-md-8 zero-margin zero-padding first-event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a>
-    </div>
+    <h3>This place is under construction.</h3>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
     <script src="js/jquery_1.11.3_min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed-->
