--- a/merchandize.html
+++ b/merchandize.html
@@ -34,8 +34,22 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid events-container">
-      <h3 class="text-center">All Events</h3><a href="event.html" class="col-xs-12 col-sm-4 col-md-8 zero-margin zero-padding first-event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a>
+    <div class="container-fluid">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="row zero-margin zero-padding">
+          <div class="col-md-4"><img src="http://placehold.it/200x283" class="img-responsive center-block"></div>
+          <div class="col-md-8">
+            <h4>Description</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+          </div>
+        </div>
+        <div class="row zero-margin zero-padding">
+          <h3 class="text-center">Don't miss it!!! Order now!!!</h3>
+          <iframe src="https://docs.google.com/forms/d/1aHRztyJWb6tBtVb9Z4zYMRX4FrsLBJKFdPBwzNWVsbk/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0" class="center-block">Loading...</iframe>
+        </div>
+      </div>
+      <div class="col-md-1"></div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
     <script src="js/jquery_1.11.3_min.js"></script>
