--- a/all-events.html
+++ b/all-events.html
@@ -35,7 +35,31 @@
       </div>
     </nav>
     <div class="container-fluid events-container">
-      <h3 class="text-center">All Events</h3><a href="event.html" class="col-xs-12 col-sm-4 col-md-8 zero-margin zero-padding first-event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block"></a>
+      <h3 class="text-center">All Events</h3><a href="event.html" class="col-xs-12 col-sm-4 col-md-8 zero-margin zero-padding first-event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block">
+        <div class="overlay desktop-only">
+          <h3 class="overlay-event-title">Event title</h3>
+        </div>
+        <h4 class="text-center mobile-only">Event title</h4></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block">
+        <div class="overlay desktop-only">
+          <h3 class="overlay-event-title">Event title</h3>
+        </div>
+        <h4 class="text-center mobile-only">Event title</h4></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block">
+        <div class="overlay desktop-only">
+          <h3 class="overlay-event-title">Event title</h3>
+        </div>
+        <h4 class="text-center mobile-only">Event title</h4></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block">
+        <div class="overlay desktop-only">
+          <h3 class="overlay-event-title">Event title</h3>
+        </div>
+        <h4 class="text-center mobile-only">Event title</h4></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block">
+        <div class="overlay desktop-only">
+          <h3 class="overlay-event-title">Event title</h3>
+        </div>
+        <h4 class="text-center mobile-only">Event title</h4></a><a href="event.html" class="col-xs-12 col-sm-4 col-md-4 zero-margin zero-padding event-pill"><img src="http://placehold.it/750x500" class="img-rounded img-responsive center-block">
+        <div class="overlay desktop-only">
+          <h3 class="overlay-event-title">Event title</h3>
+        </div>
+        <h4 class="text-center mobile-only">Event title</h4></a>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
     <script src="js/jquery_1.11.3_min.js"></script>
