--- a/event.html
+++ b/event.html
@@ -42,7 +42,7 @@
       <div class="col-md-1"></div>
     </div>
     <div class="container-fluid event-details-tab-container">
-      <ul class="nav nav-tabs">
+      <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="#about" role="tab" data-toggle="tab">About this event</a></li>
         <li role="presentation"><a href="#register" role="tab" data-toggle="tab">Register</a></li>
         <li role="presentation"><a href="#updates" role="tab" data-toggle="tab">Updates</a></li>
