--- a/index.html
+++ b/index.html
@@ -69,24 +69,28 @@
     </div>
     <div class="container-fluid">
       <h2 class="text-center">Latest News</h2>
-      <div class="container-fluid announcements center-block">
-        <div class="col-md-4"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
-        <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <div class="row announcements">
+          <div class="col-md-3"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
+          <div class="col-md-9">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          </div>
+        </div>
+        <div class="row announcements">
+          <div class="col-md-3"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
+          <div class="col-md-9">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          </div>
+        </div>
+        <div class="row announcements">
+          <div class="col-md-3"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
+          <div class="col-md-9">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          </div>
         </div>
       </div>
-      <div class="container-fluid announcements center-block">
-        <div class="col-md-4"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
-        <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        </div>
-      </div>
-      <div class="container-fluid announcements center-block">
-        <div class="col-md-4"><img src="http://placehold.it/100x100" class="img-rounded img-responsive center-block"></div>
-        <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        </div>
-      </div>
+      <div class="col-md-2"></div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
     <script src="js/jquery_1.11.3_min.js"></script>
